--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "dotnetacquisition",
 	"displayName": "DotnetAcquisition",
-	"description": "An extension to acquire tooling to develop .NET Core applications in Visual Studio Code.",
+	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
 	"version": "0.0.1",
 	"publisher": "ms-vscode",
 	"engines": {
@@ -11,7 +11,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:dotnet.acquire"
+        "onCommand:dotnet.acquire",
+        "onCommand:dotnet.uninstallAll"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
