Split into 3 projects.
- We now have a library, an extension and a sample.
- The library is the core of all logic dotnet core acquisition related.
- The extension is the actual VSCode extension that is shipped but acts like a shell to host the logic from the library.
- The sample acts as a dependent extension that needs .NET Core tooling

--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,9 @@ project.lock.json
 launchSettings.json
 global.json
 BenchmarkDotNet.Artifacts/
-Microsoft.VisualStudio.RazorExtension.nuget.props
-Microsoft.VisualStudio.RazorExtension.nuget.targets
 msbuild.binlog
 msbuild.log
 node_modules
 .dotnet
-out/*
+out
 install.*
