--- a/sample/package.json
+++ b/sample/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "dotnetcore-acquisition",
-	"displayName": "DotnetCoreAcquisition",
-	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
+	"name": "sample-extension",
+	"displayName": "Sample",
+	"description": "A sample extension to show how the dotnetcore-acquisition extension is used.",
 	"version": "0.0.1",
 	"publisher": "ms-vscode",
 	"engines": {
@@ -11,12 +11,29 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:dotnet.acquire",
-		"onCommand:dotnet.uninstallAll",
-		"onCommand:dotnet.showAcquisitionLog"
+		"onCommand:sample.dotnet.acquire",
+		"onCommand:sample.dotnet.uninstallAll"
 	],
 	"main": "./out/extension.js",
-	"contributes": {},
+	"contributes": {
+		"commands": [
+			{
+				"command": "sample.dotnet.acquire",
+				"title": "Acquire .NET Core tooling",
+				"category": "Sample"
+			},
+			{
+				"command": "sample.dotnet.uninstallAll",
+				"title": "Uninstall all .NET Core tooling",
+				"category": "Sample"
+			},
+			{
+				"command": "sample.dotnet.showAcquisitionLog",
+				"title": "Show .NET Core tooling acquisition log",
+				"category": "Sample"
+			}
+		]
+	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
@@ -29,8 +46,8 @@
 	},
 	"devDependencies": {
 		"typescript": "^3.3.1",
-		"tslint": "^5.12.1",
 		"vscode": "^1.1.28",
+		"tslint": "^5.12.1",
 		"@types/node": "^10.12.21",
 		"@types/mocha": "^2.2.42",
 		"@types/rimraf": "2.0.2"
