--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -19,10 +19,11 @@
 	"contributes": {},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
+		"compile": "npm run clean && tsc -p ./",
+		"watch": "npm run compile && tsc -watch -p ./",
 		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"test": "npm run compile && node ./node_modules/vscode/bin/test",
+        "clean": "rimraf out"
 	},
 	"dependencies": {
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
@@ -32,7 +33,7 @@
 		"tslint": "^5.12.1",
 		"vscode": "^1.1.28",
 		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42",
-		"@types/rimraf": "2.0.2"
+        "@types/mocha": "^2.2.42",
+        "rimraf": "2.6.3"
 	}
 }
