--- a/dotnetcore-acquisition-library/tsconfig.json
+++ b/dotnetcore-acquisition-library/tsconfig.json
@@ -6,7 +6,8 @@
 		"lib": [
 			"es6"
 		],
-		"sourceMap": true,
+        "sourceMap": true,
+        "declaration": true,
 		"rootDir": "src",
 		"strict": true   /* enable all strict type-checking options */
 	},
