--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -1,5 +1,9 @@
 {
 	"name": "dotnetcore-acquisition",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/NTaylorMullen/vscode-dotnetcore-acquisition-extension.git"
+	},
 	"displayName": "DotnetCoreAcquisition",
 	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
 	"version": "0.0.1",
@@ -29,11 +33,12 @@
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
 	},
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"tslint": "^5.12.1",
-		"vscode": "^1.1.28",
-		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42",
-		"rimraf": "2.6.3"
+		"rimraf": "2.6.3",
+		"typescript": "3.4.5",
+		"vscode": "1.1.34",
+		"tslint": "5.16.0",
+		"@types/node": "12.0.0",
+		"@types/mocha": "5.2.6",
+		"@types/rimraf": "2.0.2"
 	}
 }
