--- a/dotnetcore-acquisition-library/package.json
+++ b/dotnetcore-acquisition-library/package.json
@@ -16,16 +16,18 @@
 		"clean": "rimraf dist"
 	},
 	"dependencies": {
-		"vscode": "1.1.34",
+		"chai": "^4.2.0",
 		"rimraf": "2.6.3",
-		"shelljs": "0.8.3"
+		"shelljs": "0.8.3",
+		"vscode": "1.1.34"
 	},
 	"devDependencies": {
-		"typescript": "3.4.5",
-		"tslint": "5.16.0",
-		"@types/node": "12.0.0",
+		"@types/chai": "^4.2.4",
 		"@types/mocha": "5.2.6",
+		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
-		"@types/shelljs": "0.8.3"
+		"@types/shelljs": "0.8.3",
+		"tslint": "5.16.0",
+		"typescript": "3.4.5"
 	}
 }
