--- a/dotnetcore-acquisition-library/.vscode/tasks.json
+++ b/dotnetcore-acquisition-library/.vscode/tasks.json
@@ -4,9 +4,13 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "compile",
 			"type": "npm",
-			"script": "compile",
+			"script": "watch",
+			"problemMatcher": "$tsc-watch",
+			"isBackground": true,
+			"presentation": {
+				"reveal": "never"
+			},
 			"group": {
 				"kind": "build",
 				"isDefault": true
