--- a/dotnetcore-acquisition-extension/.vscode/launch.json
+++ b/dotnetcore-acquisition-extension/.vscode/launch.json
@@ -18,17 +18,18 @@
 			"preLaunchTask": "npm: watch"
 		},
 		{
-			"name": "Extension Acquisition Tests",
+			"name": "Extension Acquisition Functional Tests",
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--extensionTestsPath=${workspaceFolder}/out/test"
+				"--extensionTestsPath=${workspaceFolder}/out/test/functional"
 			],
 			"outFiles": [
 				"${workspaceFolder}/out/test/**/*.js"
 			],
+			"internalConsoleOptions": "openOnSessionStart",
 			"preLaunchTask": "npm: watch"
 		}
 	]
