--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -2,7 +2,7 @@
 	"name": "dotnetcore-acquisition",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/NTaylorMullen/vscode-dotnetcore-acquisition-extension.git"
+		"url": "https://github.com/dotnet/vscode-dotnetcore-acquisition-extension.git"
 	},
 	"displayName": "DotnetCoreAcquisition",
 	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
@@ -26,20 +26,23 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "npm run clean && tsc -p ./",
 		"watch": "npm run compile && tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test",
+		"test": "npm run compile --silent && node ./out/test/functional/runTest.js",
 		"clean": "rimraf out"
 	},
 	"dependencies": {
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
 	},
 	"devDependencies": {
-		"rimraf": "2.6.3",
-		"typescript": "3.4.5",
-		"vscode": "1.1.34",
-		"tslint": "5.16.0",
-		"@types/node": "12.0.0",
 		"@types/mocha": "5.2.6",
-		"@types/rimraf": "2.0.2"
+		"@types/node": "12.0.0",
+		"@types/rimraf": "2.0.2",
+		"@types/vscode": "^1.33.0",
+		"chai": "^4.2.0",
+		"glob": "^7.1.5",
+		"mocha": "^4.1.0",
+		"rimraf": "2.6.3",
+		"tslint": "5.16.0",
+		"typescript": "3.4.5",
+		"vscode-test": "^1.2.2"
 	}
 }
