--- a/sample/package.json
+++ b/sample/package.json
@@ -51,7 +51,6 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "npm run clean && tsc -p ./",
 		"watch": "npm run clean && tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test",
 		"clean": "rimraf out"
 	},
@@ -61,10 +60,10 @@
 	"devDependencies": {
 		"rimraf": "2.6.3",
 		"typescript": "3.4.5",
-		"vscode": "1.1.34",
 		"tslint": "5.16.0",
 		"@types/node": "12.0.0",
 		"@types/mocha": "5.2.6",
-		"@types/rimraf": "2.0.2"
+		"@types/rimraf": "2.0.2",
+		"@types/vscode": "^1.33.0"
 	}
 }
