--- a/dotnetcore-acquisition-library/package.json
+++ b/dotnetcore-acquisition-library/package.json
@@ -5,8 +5,8 @@
 	"engines": {
 		"vscode": "^1.33.0"
 	},
-	"main": "./dist/extension.js",
-	"types": "./dist/extension.d.ts",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "npm run clean && tsc -p ./",
