--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -2,7 +2,7 @@
 	"name": "dotnetcore-acquisition",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/dotnet/vscode-dotnetcore-acquisition-extension.git"
+		"url": "https://github.com/dotnet/vscode-dotnetcore.git"
 	},
 	"displayName": "DotnetCoreAcquisition",
 	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
@@ -27,7 +27,8 @@
 		"compile": "npm run clean && tsc -p ./",
 		"watch": "npm run compile && tsc -watch -p ./",
 		"test": "npm run compile --silent && node ./out/test/functional/runTest.js",
-		"clean": "rimraf out"
+		"clean": "rimraf out",
+		"watch-all": "cd ../dotnetcore-acquisition-library && npm run watch && cd ../dotnetcore-acquisition-extension && npm run watch"
 	},
 	"dependencies": {
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
