PR feedback updates for Acquisition Invoker

--- a/dotnetcore-acquisition-extension/.vscode/launch.json
+++ b/dotnetcore-acquisition-extension/.vscode/launch.json
@@ -35,7 +35,7 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Acquisistion Worker Unit Tests",
+			"name": "Acquisition Library Unit Tests",
 			"program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
 			"args": [
 				"-u",
