--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -42,6 +42,7 @@
 		"glob": "^7.1.5",
 		"mocha": "^4.1.0",
 		"rimraf": "2.6.3",
+		"shelljs": "^0.8.3",
 		"tslint": "5.16.0",
 		"typescript": "3.4.5",
 		"vscode-test": "^1.2.2"
