--- a/dotnetcore-acquisition-library/package.json
+++ b/dotnetcore-acquisition-library/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "dotnetcore-acquisition-library",
 	"description": "A library to acquire .NET Core tooling.",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/dotnet/vscode-dotnetcore.git"
+	},
+	"license": "MIT",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.33.0"
