--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -4,6 +4,7 @@
 		"type": "git",
 		"url": "https://github.com/dotnet/vscode-dotnetcore.git"
 	},
+	"license": "MIT",
 	"displayName": "DotnetCoreAcquisition",
 	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
 	"version": "0.0.1",
