--- a/sample/package.json
+++ b/sample/package.json
@@ -2,6 +2,11 @@
 	"name": "sample-extension",
 	"displayName": "Sample",
 	"description": "A sample extension to show how the dotnetcore-acquisition extension is used.",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/dotnet/vscode-dotnetcore.git"
+	},
+	"license": "MIT",
 	"version": "0.0.1",
 	"publisher": "ms-vscode",
 	"engines": {
