--- a/dotnetcore-acquisition-library/package.json
+++ b/dotnetcore-acquisition-library/package.json
@@ -24,12 +24,17 @@
 		"@types/chai": "^4.2.4",
 		"@types/mocha": "5.2.6",
 		"@types/node": "12.0.0",
+		"@types/request-promise-native": "^1.0.17",
 		"@types/rimraf": "2.0.2",
+		"@types/semver": "^6.2.0",
 		"@types/shelljs": "0.8.3",
 		"@types/vscode": "^1.33.0",
 		"chai": "^4.2.0",
+		"chai-as-promised": "^7.1.1",
 		"glob": "^7.1.5",
 		"mocha": "^4.1.0",
+		"request": "^2.88.0",
+		"request-promise-native": "^1.0.8",
 		"rimraf": "2.6.3",
 		"shelljs": "0.8.3",
 		"tslint": "5.16.0",
