--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -35,6 +35,7 @@
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
 	},
 	"devDependencies": {
+		"@types/chai": "^4.2.7",
 		"@types/mocha": "5.2.6",
 		"@types/node": "12.0.0",
 		"@types/rimraf": "2.0.2",
