--- a/dotnetcore-acquisition-library/package.json
+++ b/dotnetcore-acquisition-library/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@types/chai": "^4.2.4",
+		"@types/chai-as-promised": "^7.1.2",
 		"@types/mocha": "5.2.6",
 		"@types/node": "12.0.0",
 		"@types/request-promise-native": "^1.0.17",
