--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -9,6 +9,7 @@
 	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
 	"version": "0.0.1",
 	"publisher": "ms-vscode",
+	"appInsightsKey": "45bbfe32-a7a7-434f-9c06-b896200fa54d",
 	"engines": {
 		"vscode": "^1.33.0"
 	},
@@ -46,7 +47,7 @@
 		"mocha": "^4.1.0",
 		"rimraf": "2.6.3",
 		"shelljs": "^0.8.3",
-		"tslint": "5.16.0",
+		"tslint": "^5.16.0",
 		"typescript": "3.4.5",
 		"vscode-test": "^1.2.2"
 	}
