Adding installation validation, adding new events based on telemetry review

--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -34,6 +34,7 @@
 		"lint": "tslint -c ../tslint.json '../dotnetcore-acquisition-library/src/**/*.ts' '../dotnetcore-acquisition-extension/src/**/*.ts'"
 	},
 	"dependencies": {
+		"child_process": "^1.0.2",
 		"dotnetcore-acquisition-library": "file:../dotnetcore-acquisition-library"
 	},
 	"devDependencies": {
