--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -8,7 +8,7 @@
 	"displayName": "DotnetCoreAcquisition",
 	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
 	"version": "1.0.0",
-	"publisher": "ms-vscode",
+	"publisher": "ms-azuretools",
 	"engines": {
 		"vscode": "^1.33.0"
 	},
