--- a/sample/package.json
+++ b/sample/package.json
@@ -1,16 +1,16 @@
 {
 	"name": "sample-extension",
 	"displayName": "Sample",
-	"description": "A sample extension to show how the dotnetcore-acquisition extension is used.",
+	"description": "A sample extension to show how the vscode-dotnet-runtime extension is used.",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/dotnet/vscode-dotnetcore.git"
+		"url": "https://github.com/dotnet/vscode-dotnet-runtime.git"
 	},
 	"license": "MIT",
 	"version": "0.0.1",
 	"publisher": "ms-azuretools",
 	"engines": {
-		"vscode": "^1.33.0"
+		"vscode": "^1.41.0"
 	},
 	"categories": [
 		"Other"
@@ -69,6 +69,7 @@
 		"@types/vscode": "^1.41.0",
 		"rimraf": "2.6.3",
 		"tslint": "5.16.0",
-		"typescript": "3.4.5"
+		"typescript": "3.4.5",
+		"mocha": "^7.0.0"
 	}
 }
