--- a/dotnetcore-acquisition-extension/package.json
+++ b/dotnetcore-acquisition-extension/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "dotnetcore-acquisition",
+	"name": "vscode-dotnet-runtime",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/dotnet/vscode-dotnetcore.git"
+		"url": "https://github.com/dotnet/vscode-dotnet-runtime.git"
 	},
 	"license": "MIT",
-	"displayName": "DotnetCoreAcquisition",
-	"description": "An extension to acquire .NET Core tooling to run .NET Core applications in Visual Studio Code extensions.",
-	"version": "1.0.0",
+	"displayName": ".NET Authoring Tool for Extensions",
+	"description": "Allows acquisition of the .NET runtime specifically for VSCode extension authors.",
+	"version": "0.1.0",
 	"publisher": "ms-azuretools",
 	"engines": {
-		"vscode": "^1.33.0"
+		"vscode": "^1.41.0"
 	},
 	"categories": [
 		"Other"
@@ -43,8 +43,9 @@
 		"@types/rimraf": "2.0.2",
 		"@types/vscode": "^1.41.0",
 		"chai": "^4.2.0",
+		"diff": ">=3.5.0",
 		"glob": "^7.1.5",
-		"mocha": "^4.1.0",
+		"mocha": "^7.0.0",
 		"rimraf": "2.6.3",
 		"shelljs": "^0.8.3",
 		"tslint": "^5.20.1",
