Adding extension bundling with root package.json for marketplace display

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,17 @@
 .vscode/**
-.vscode-test/**
-out/test/**
-src/**
-.gitignore
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/tslint.json
+.devcontainer/**
+dist/test/**
+Documentation/**
+node_modules/**
+vscode-dotnet-runtime-extension/**
+vscode-dotnet-runtime-library/**
+sample/**
 **/*.map
 **/*.ts
+.gitignore
+azure-pipelines.yml
+build.*
+test.*
+tslint.json
+*.txt
+vscode-dotnet-runtime.code-workspace
