Updating branding, adding dev spec

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	"license": "MIT",
 	"preview": true,
 	"author": "Microsoft Corporation",
-	"displayName": ".NET Authoring Tool for Extensions",
-	"description": "Allows acquisition of the .NET runtime specifically for VSCode extension authors.",
+	"displayName": ".NET Install Tool for Extension Authors",
+	"description": "Allows acquisition of the .NET Core runtime specifically for VSCode extension authors.",
 	"icon": "images/dotnetIcon.png",
 	"version": "0.1.0",
 	"publisher": "ms-azuretools",
