--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -40,6 +40,7 @@
 		"diff": ">=3.5.0",
 		"glob": "^7.1.5",
 		"mocha": "^7.0.0",
+		"open": "^7.0.2",
 		"rimraf": "2.6.3",
 		"shelljs": "^0.8.3",
 		"tslint": "^5.20.1",
