--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -37,6 +37,7 @@
 		"chai-as-promised": "^7.1.1",
 		"diff": ">=3.5.0",
 		"mocha": "^7.0.0",
+		"open": "^7.0.2",
 		"request": "^2.88.0",
 		"request-promise-native": "^1.0.8",
 		"rimraf": "2.6.3",
